// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmPage should show links to other pages 1`] = `
<div
  class="page"
  dataempty="true"
>
  <!---->
    
  <!---->
   
  <!---->
</div>
`;

exports[`TmPage shows a page skeleton 1`] = `
<div
  class="page"
>
  <!---->
    
  <!---->
   
  <!---->
</div>
`;
